fix: fix overflowing client list

--- a/scss/components/_client-list.scss
+++ b/scss/components/_client-list.scss
@@ -3,7 +3,7 @@
   display: flex;
   flex-wrap: wrap;
   margin-top: var(--gutter);
-  width: 100%;
+  max-width: 100%;
 
   li {
     align-items: center;
